--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>Flat $65 rate for diagnostic work, waived for any related work done. No extra travel charge within 50 miles.</p>
       </a>
       <a href="https://www.amazon.com" target="_blank" class="project">
-        <img src="construction.png" width="100%" height="100%"></img>
+        <img src="Construction.png" width="100%" height="100%"></img>
         <h5>Common Replacement Parts</h5>
         <p>Amazon affiliate store. If you use these links, amazon kicks us back some money based on the total of your cart at checkout. </p>
       </a>
