--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Your Projects -->
     <section class="projects">
       <a href="https://github.com/f1tzzz167" target="_blank" class="project"> 
-        <img src="rates.jpeg" width="100%" height="100%"></img>
+        <img src="Rates.jpeg" width="100%" height="100%"></img>
         <h5>Services and Rates</h5>
         <p>Flat $65 rate for diagnostic work, waived for any related work done. No extra travel charge within 50 miles.</p>
       </a>
